--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "react-native-safe-area-context": "^4.5.0",
     "react-native-screens": "~3.20.0",
     "react-native-simple-modal": "^9.0.1",
-    "react-native-web": "^0.18.12"
+    "react-native-web": "^0.18.12",
+    "recoil": "^0.7.7"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
